# connectly

./: .env.example  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 047480e30827_init_schema.py  13dfa9385735_init_schema.py  4ed018353007_init_schema.py  b8242d133066_add_column_updated_at_in_users.py  f02fd07e9d56_init_schema.py
app/: main.py
app/core/: config.py  database.py  db_init.py  enum.py  security.py
app/dependencies/: database.py  db_dependency.py  device_dependencies.py  device_dependency.py  user_dependencies.py  user_dependency.py
app/enums/: device_enum.py  role_enum.py
app/middleware/: auth_middleware.py
app/middlewares/: auth.py  auth_middleware.py
app/models/: __init__.py  channel_model.py  channel_pattern_model.py  device_model.py  sensor_model.py  user.py  user_model.py
app/routers/: auth.py  auth_router.py  device_router.py  user.py  user_router.py
app/schemas/: device_schema.py  user_schema.py
app/services/: auth.py  auth_service.py  auth_services.py  device_services.py  user.py  user_service.py  user_services.py
